# crypto-virality-e2e-model

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_model_evaluation.py  train_and_evaluate.py
crypto_virality_e2e_model/: config.py  data.py  features.py  model_factory.py
crypto_virality_e2e_model/research/: historic_crypto_prices.ipynb  whitepaper_nlp.ipynb
data/: eda.ipynb  model_data_gen.ipynb
data/data_gen/: clean_combined_cap_df_all.csv  clean_pdf_att_df.csv  pdf_url.csv  raw_data_gen.ipynb  raw_features.csv  wp_url_df_100_150.csv  wp_url_df_150_200.csv  wp_url_df_1_50.csv  wp_url_df_2.csv  wp_url_df_200_242.csv  wp_url_df_50_100.csv  wp_url_df_total.csv
data/data_gen/research/: data_gen_experiment.ipynb  eda.ipynb
data/raw_data_gen/: data_gen.ipynb  get_wp_urls.py  raw_data_gen.ipynb  wp_url_df
data/raw_data_gen/research/: historic_crypto_prices.ipynb  whitepaper_features.ipynb
mlruns/0/: meta.yaml
mlruns/709327877898246060/: meta.yaml
mlruns/709327877898246060/0c018749db28484c82c507c42a7c55ae/: meta.yaml
mlruns/709327877898246060/2d7a885bde894df3a7dab1c7ae2ba4a2/: meta.yaml
mlruns/709327877898246060/2f79606be8064968834230af283209c8/: meta.yaml
mlruns/709327877898246060/4411857d5be4410f845d5a2e9987790c/: meta.yaml
mlruns/709327877898246060/4a144ddfa5c14dc99814b2fa2c418651/: meta.yaml
mlruns/709327877898246060/a29ec5cf18794fe3b3ce64dacf06be54/: meta.yaml
mlruns/709327877898246060/cde629eae9254dc48f7ac31f9ab98c89/: meta.yaml
notebooks/: data_gen.ipynb
notebooks/research/: whitepaper_features.ipynb
(+96 files in other folders)
