[tool.poetry]
name = "crypto-virality-e2e-model"
version = "0.1.0"
description = ""
authors = ["Haydn Martin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
nougat-ocr = "^0.1.17"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


